// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate-colors CLI > should generate light and dark color tokens with default HEX format > dark-hex 1`] = `
{
  "Dark": {
    "Blue": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#0a0b0c",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#c4eeff",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#7dceff",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#a2e0ff",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#2e82b7",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#33607e",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#316f98",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#1d2226",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#2d8bc5",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#5abbfb",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#33607e",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#ecffff",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#030304",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#b7e8ff",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#2a3741",
      },
    },
    "Gray": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#0b0b0b",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e8e8e8",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#c4c4c4",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#d7d7d7",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#7a7a7a",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#5b5b5b",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#696969",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#222",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#838383",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#b1b1b1",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#5b5b5b",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#fcfcfc",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#030303",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e1e1e1",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#353535",
      },
    },
    "Moss Green": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#0a0b0b",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#c7f1f6",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#8cd2da",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#ace3e9",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#41878e",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#3c6266",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#3e7378",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#1e2323",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#439199",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#6ec0c9",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#3c6266",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e6ffff",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#030303",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#bcebf1",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#2c3839",
      },
    },
  },
}
`;

exports[`generate-colors CLI > should generate light and dark color tokens with default HEX format > light-hex 1`] = `
{
  "Light": {
    "Blue": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e7f8ff",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#0e5279",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#006aa0",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#085883",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#8dc5ee",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#c0e0f8",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#aad4f3",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#f4ffff",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#6fb6e9",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#0070a9",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#b5daf5",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#121e27",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#fff",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#015e8d",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#c5e3f9",
      },
    },
    "Gray": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#f5f5f5",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#4d4d4d",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#636363",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#525252",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#bebebe",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#dbdbdb",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#cecece",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#fff",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#aeaeae",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#696969",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#d4d4d4",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#1d1d1d",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#fff",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#585858",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#dedede",
      },
    },
    "Moss Green": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#eaf8fa",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#20565c",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#206f77",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#205c62",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#97c8cd",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#c5e1e4",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#b1d6da",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#f6ffff",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#7cbac1",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#21767e",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#bbdbdf",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#141f20",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#fff",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#1f6369",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#cae4e7",
      },
    },
  },
}
`;

exports[`generate-colors CLI > should generate tokens with OKLCH format when specified > light-oklch 1`] = `
{
  "Light": {
    "Blue": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.970 0.025 240.7)",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.420 0.091 240.7)",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.500 0.120 240.7)",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.440 0.099 240.7)",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.800 0.082 240.7)",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.890 0.047 240.7)",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.850 0.062 240.7)",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.999 0.019 240.7)",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.750 0.102 240.7)",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.520 0.125 240.7)",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.870 0.055 240.7)",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.230 0.025 240.7)",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(1.000 0.018 240.7)",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.460 0.106 240.7)",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.900 0.044 240.7)",
      },
    },
    "Moss Green": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.970 0.015 204.6)",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.420 0.057 204.6)",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.500 0.075 204.6)",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.440 0.062 204.6)",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.800 0.051 204.6)",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.890 0.030 204.6)",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.850 0.039 204.6)",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.999 0.012 204.6)",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.750 0.064 204.6)",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.520 0.078 204.6)",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.870 0.034 204.6)",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.230 0.015 204.6)",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(1.000 0.011 204.6)",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.460 0.066 204.6)",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "oklch(0.900 0.028 204.6)",
      },
    },
  },
}
`;

exports[`generate-colors CLI > should use custom gaussian parameters if provided > custom-params 1`] = `
{
  "Light": {
    "Test Color": {
      "bg-canvas": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#f9f4f3",
      },
      "bg-fill-emphasis-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#9c0000",
      },
      "bg-fill-emphasis-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#c30000",
      },
      "bg-fill-emphasis-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#a50000",
      },
      "bg-fill-muted-active": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e1b1a9",
      },
      "bg-fill-muted-default": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e8d6d3",
      },
      "bg-fill-muted-hover": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e3c6c1",
      },
      "bg-surface": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#fffefd",
      },
      "border-medium": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e2988d",
      },
      "border-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#ce0000",
      },
      "border-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#e5ceca",
      },
      "text-strong": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#390905",
      },
      "text-strong-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#fff",
      },
      "text-subtle": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#af0000",
      },
      "text-subtle-on-emphasis": {
        "$description": "",
        "$extensions": {
          "com.figma": {
            "codeSyntax": {},
            "hiddenFromPublishing": false,
            "scopes": [
              "ALL_SCOPES",
            ],
          },
        },
        "$type": "color",
        "$value": "#eadad7",
      },
    },
  },
}
`;
